# MyFEM

./: .gitignore  CMakeLists.txt  README.md  generate.py  makefile  plot_mesh.py
Preprocess/: generate.py  process.py
Result/: result.vtk
include/: Structure.h  g++14.h  gauss.h
src/: CMakeLists.txt  Structure.cpp  gauss.cpp  main.cpp
